[package]
name = "nodus-core-engine"
version = "0.1.0"
edition = "2021"
description = "Core payment processing engine for the Nodus Protocol"
license = "MIT"

[[bin]]
name = "nodus-core-engine"
path = "src/main.rs"

[dependencies]
axum            = "0.7"
tokio           = { version = "1", features = ["full"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
uuid            = { version = "1", features = ["v4"] }
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror       = "1"
reqwest         = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dashmap         = "5"
chrono          = { version = "0.4", features = ["serde"] }
tower-http      = { version = "0.5", features = ["trace", "cors"] }
async-trait     = "0.1"
