[package]
name = "nodus-core-engine"
version = "0.1.0"
edition = "2021"
description = "Core payment processing engine for the Nodus Protocol"
license = "MIT"

[lib]
name = "nodus_core_engine"
path = "src/lib.rs"

[[bin]]
name = "nodus-core-engine"
path = "src/main.rs"

[dependencies]
axum            = "0.7"
tokio           = { version = "1", features = ["full"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
uuid            = { version = "1", features = ["v4"] }
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror       = "1"
reqwest         = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dashmap         = "5"
chrono          = { version = "0.4", features = ["serde"] }
tower-http      = { version = "0.5", features = ["trace", "cors"] }
tower           = "0.4"
async-trait     = "0.1"
hmac            = "0.12"
sha2            = "0.10"
hex             = "0.4"
base64          = "0.22"
redis           = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
tokio           = { version = "1", features = ["full", "test-util"] }
